# thesis-backup-client

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
backupclient/: __init__.py
backupclient/File/: __init__.py  routes.py
doc/: 3-tier-architecture.d2  architecture-diagram.d2  authentification.d2  borg-architecture-diagram.d2  proxmox-architecture-diagram.d2  rest-server-client.d2  sequence-diagram-prototype.d2  setup-testing-architecture.d2
tests/: conftest.py  test_file.py
tests/testdata/: file_list.json
